--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:8000",
   "devDependencies": {
     "prettier": "2.8.0"
   }
